--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -3,11 +3,17 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import H1 from '../components/H1.astro';
 import Main from '../components/Main.astro';
+import P from '../components/P.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="uwu">
 	<Main>
-		<H1 text="hello"></H1>
+		<H1 text="welcome"></H1>
+		<P text="hi my name is noi. I'm an informatics engineering undergrad and a web development associate's degree graduate."></P>
+		<P text="i really like reading books, doing art and playing ttrpgs."></P>
+		<P text="i'm an open source advocate."></P>
+
+
 	</Main>
 </Layout>
 
