--- a/blog/src/components/H1.astro
+++ b/blog/src/components/H1.astro
@@ -7,4 +7,4 @@ type Props = {
 const { text } = Astro.props;
 ---
 
-<h1 class="text-6xl text-purple-300 font-bold text-left font-mono">{text}</h1>
+<h1 class="text-6xl text-white font-bold text-left font-mono pb-4">{text}</h1>
