--- a/blog/src/components/Header.astro
+++ b/blog/src/components/Header.astro
@@ -1,7 +1,7 @@
-<header class="flex justify-between items-center px-25 py-12 max-sem:px-5 max-sm:py-10 max-w-7xl w-full mx-auto">
+<header class="flex justify-between items-center px-2 py-12 max-sem:px-5 max-sm:py-10 max-w-7xl w-full mx-auto">
     <!-- Logo or Site Title -->
     <div class="logo">
-      <a href="/" class="text-2xl font-bold text-purple-400">N01</a>
+      <a href="/" class="text-2xl font-bold text-purple-400 font-mono"></a>
     </div>
   
     <!-- Navigation Menu -->
