--- a/blog/src/components/Main.astro
+++ b/blog/src/components/Main.astro
@@ -1,3 +1,8 @@
-<main class="px-24 max-w-7xl mx-auto w-full max-sm:px-5">
+<main class="px-24 max-w-7xl mx-auto w-full max-sm:px-5 cursor">
     <slot/>
 </main>
+<style> 
+    .cursor {
+        cursor: url('/images/hand.png'), auto;
+    }
+</style>
