--- a/blog/src/components/P.astro
+++ b/blog/src/components/P.astro
@@ -6,5 +6,5 @@ type Props = {
 const { text } = Astro.props;
 ---
 
-<p class="text-green-300 font-bold text-left font-mono blinking-text">{text}</p>
+<p class="text-purple-400 text-left font-mono blinking-text leading-[3rem]">{text}</p>
 
