just general changes

--- a/blog/src/components/Footer.astro
+++ b/blog/src/components/Footer.astro
@@ -5,20 +5,15 @@ import "../styles/global.css";
 
 --- 
 
-<footer class=" text-computerRed py-4 text-center font-mono">
+<footer class=" text-pinkiePiePink py-4 text-center font-mono">
     <div class="container mx-auto px-6">
       <Gif src="./badges/doffy.gif"></Gif>
 
       <nav>
-        <ul class="list-none p-8">
-          <li class="inline mx-2"><a href="/about" class="text-computerRed hover:underline">About</a></li> |
-          <li class="inline mx-2"><a href="https://github.com/Noihirsch" class="hover:underline">My github</a></li> | 
-          <li class="inline mx-2"><a href="/blog" class="hover:underline">Blog</a></li> | 
-          <li class="inline mx-2"><a href="/projects" class="hover:underline">Projects</a></li> | 
-          <li class="inline mx-2"><a href="/reading" class="hover:underline">Reading list</a></li>
-
-
-
+        <ul class="list-none p-8">|
+          <li class="inline mx-2"><a href="/about" class="text-pinkiePiePink hover:underline">Bluesky</a></li> |
+          <li class="inline mx-2"><a href="https://github.com/Noihirsch" class="hover:underline">Instagram</a></li> | 
+          <li class="inline mx-2"><a href="/blog" class="hover:underline">Github</a></li> | 
         </ul>
       </nav>
     </div>
