--- a/blog/src/pages/about.astro
+++ b/blog/src/pages/about.astro
@@ -13,7 +13,7 @@ const favs = ["music: ghost, sleep token, rammstein, nightwish, nine ice kills, 
 <Layout title="about me">
     <Main style="display: flex; flex-direction: column; align-items: center; width: 400px; margin: 0 auto;">
        <H3 text="About me ✮"></H3>
-        <P text="I go by she/they pronouns. I'm based in Spain but I travel whenever I have the chance to. I am on the spectrum, so I might appear cold at first, but I love meeting people, so please feel free to reach out! ⸜(｡˃ ᵕ ˂ )⸝♡"></P>
+        <P text="I'm based in Spain but I travel whenever I have the chance to. I am on the spectrum, so I might appear cold at first, but I love meeting people, so please feel free to reach out! ⸜(｡˃ ᵕ ˂ )⸝♡"></P>
         <P text="interests: "></P>
         <ul style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
             <List items={interests}></List>
