--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -37,14 +37,13 @@ import "../styles/global.css";
 
 <Layout title="uwu">
 	<Main>
-		<H3 text="✮ welcome ✮"></H3>
-		<P text=" > Associate's degree in Web application development graduate. Studying Bsc in Computer Science."></P>
-		<P text="My main interest is cybersecurity and I'm studying networks and operative systems atm."></P>
-		<P text="I'm an open source advocate."></P>
+		<H3 text="♡ welcome"></H3>
+		<P text=" > associate's degree in Web application development graduate, studying computer science."></P>
+		<P text=" > cybersecurity, networks and embedded system dev. "></P>
+		<P text=" > software development, python, c, rust"></P>
 		<Footer />
 
 		<div class="badge-container">
-			<img src="./badges/gnu-linux.gif" alt="linux badge">
 			<img src="./badges/g4.gif" alt="badge b">
 			<img src="./badges/gplv3.gif" alt="badge b">
 			<img src="./badges/konata.gif" alt="badge a">
@@ -68,9 +67,7 @@ import "../styles/global.css";
 			<img src="./badges/g44.gif" alt="badge a">
 			<img src="./badges/e108.gif" alt="badge a">
 			<img src="./badges/0178-mikuwink2.gif" alt="badge a">
-
-			2024
-			</div>
+		</div><br>
 
 
 	</Main>
