--- a/blog/src/components/Header.astro
+++ b/blog/src/components/Header.astro
@@ -1,14 +1,16 @@
 <header class="flex justify-between items-center px-2 py-12 max-sem:px-5 max-sm:py-10 max-w-7xl w-full mx-auto">
 
     <div class="logo">
-      <a href="/" class="text-2xl font-bold text-computerRed font-mono"></a>
+      <a href="/" class="text-2xl font-bold text-pinkiePiePink font-mono"></a>
     </div>
   
     <nav aria-label="Main Navigation">
       <ul class="flex gap-x-8">
-        <li><a href="/" class="text-computerRed font-mono">Home</a></li>
-        <li><a href="/about" class="text-computerRed font-mono">About</a></li>
-        <li><a href="/blog" class="text-computerRed font-mono">Blog</a></li>
+        <li><a href="/" class="text-pinkiePiePink font-mono">Home</a></li>
+        <li><a href="/about" class="text-pinkiePiePink font-mono">About</a></li>
+        <li><a href="/about" class="text-pinkiePiePink font-mono">Articles</a></li>
+        <li><a href="/blog" class="text-pinkiePiePink font-mono">Projects</a></li>
+        <li><a href="/blog" class="text-pinkiePiePink font-mono">Reading list</a></li>
       </ul>
     </nav>
   </header>
