--- a/blog/src/components/P.astro
+++ b/blog/src/components/P.astro
@@ -6,6 +6,6 @@ type Props = {
 const { text } = Astro.props;
 ---
 
-<p class="text-left font-mono leading-[3rem] text-computerRed">{text}</p>
+<p class="text-left font-mono leading-[3rem] text-pinkiePiePink">{text}</p>
 
 
