--- a/blog/src/layouts/Layout.astro
+++ b/blog/src/layouts/Layout.astro
@@ -44,9 +44,9 @@ const { title, description = "noihirch", image = gifURL } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #090909;
-	}
+  			font-family: system-ui, sans-serif;                    
+  			background-color: #000000;                     
+		}
 	code {
 		font-family:
 			Menlo,
