--- a/blog/src/pages/about.astro
+++ b/blog/src/pages/about.astro
@@ -12,21 +12,13 @@ const favs = ["music: ghost, sleep token, rammstein, nightwish, nine ice kills, 
 
 <Layout title="about me">
     <Main style="display: flex; flex-direction: column; align-items: center; width: 400px; margin: 0 auto;">
-       <H3 text="About me ✮"></H3>
-        <P text="I'm based in Spain but I travel whenever I have the chance to. I am on the spectrum, so I might appear cold at first, but I love meeting people, so please feel free to reach out! ⸜(｡˃ ᵕ ˂ )⸝♡"></P>
-        <P text="interests: "></P>
-        <ul style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
-            <List items={interests}></List>
-        </ul>
-                <img src="./badges/divider.webp">
-
-        <P text="favourites: "></P>
-        <ul style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
-            <List items={favs}></List>
-        </ul>
-
-          
-		<Footer />
+       <H3 text="♡ about me "></H3>
+        <P text="I got into breaking into computers when I was 10 and my parents would lock the home pc and I'd go on safe mode and delete the password registry so I could play club penguin for longer. I had a horrible python teacher that made me think I wasn't good at coding until I took it in college and learned that I was lowkey decent at it."></P>
+        <br>
+        <P text="I'm a computer engineering student now and I'm really into security and privacy. I'm really interested in pentesting, iot hacking, ad escalation, osint and anything that catches my eye at the time."></P>
+        <br>
+        <P text="I still build apps from time to time when I'm not busy watching one piece."></P><br>
+        <P text="email: noidevp at proton.me"></P>
     </Main>
 
 </Layout>
