--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -5,6 +5,7 @@ import Main from '../components/Main.astro';
 import P from '../components/P.astro';
 import Footer from '../components/Footer.astro';
 import "../styles/global.css";
+import Box from '../components/Box.astro';
 ---
 
 <style>
@@ -33,42 +34,34 @@ import "../styles/global.css";
 	  width: 8%;
 	  height: 4%;
 	}
+
+	div 
+	{
+		
+	}
 </style>
 
-<Layout title="uwu">
+<Layout title="N01">
 	<Main>
+		<div>
 		<H3 text="♡ welcome"></H3>
-		<P text=" > associate's degree in Web application development graduate, studying computer science."></P>
-		<P text=" > cybersecurity, networks and embedded system dev. "></P>
-		<P text=" > software development, python, c, rust"></P>
-		<Footer />
-
+		<P text=" > i'm N01 (read as noi) and this is my blog"></P>
+		<P text=" > opsec enthusiast, foss dev, cs student "></P>
+		<P text=" > I love reading, bad coffee and red pandas."></P>
+		</div>
+		<Footer/>
 		<div class="badge-container">
 			<img src="./badges/g4.gif" alt="badge b">
 			<img src="./badges/gplv3.gif" alt="badge b">
-			<img src="./badges/konata.gif" alt="badge a">
-			<img src="./badges/ilovehorror.gif" alt="badge b">
+			<img src="./badges/rar_download.gif" alt="badge a">
 			<img src="./badges/linux_mint.gif" alt="badge b">
-			<img src="./badges/ubuntu.gif" alt="badge b">
-			<img src="./badges/a53.gif" alt="badge b">
-
+			<img src="./badges/endeavour.jpg" alt="badge b">
+			<img src="./badges/graphicdesign.gif" alt="badge b">
+			<img src="./badges/konata.gif" alt="badge b">
 		</div>
-		<div class="badge-container">
-		<img src="./badges/d93.png" alt="badge a">
-		<img src="./badges/windowsxp.jpg" alt="badge a">
-		<img src="./badges/sanji.webp" alt="badge a">
-		<img src="./badges/j8.png" alt="badge a">
-		<img src="./badges/k18.gif" alt="badge a">
-		<img src="./badges/mlp.png" alt="badge a">
-		<img src="./badges/b56.png">
-		</div>
-		<div class="sticker-container">
-			<img src="./badges/vampires2.webp" alt="badge a">
-			<img src="./badges/g44.gif" alt="badge a">
-			<img src="./badges/e108.gif" alt="badge a">
-			<img src="./badges/0178-mikuwink2.gif" alt="badge a">
-		</div><br>
 
 
+		
+		<br>
 	</Main>
 </Layout>
