--- a/blog/src/pages/blog.astro
+++ b/blog/src/pages/blog.astro
@@ -7,9 +7,9 @@ import H3 from '../components/H3.astro';
 
 ---
 
-<Layout title="Blog.">
+<Layout title="♡ my blog">
     <Main>
-        <H3 text="N01's ramblings">
+        <H3 text="♡ my blog">
         <P text="On the making"></P>
     </Main>
     <Footer></Footer>
