fixed favicon and reorganized files

--- a/blog/src/layouts/Layout.astro
+++ b/blog/src/layouts/Layout.astro
@@ -20,9 +20,9 @@ const { title, description = "noihirch", image = gifURL } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta property="og:image" content={image}/>
+		<link rel="icon" href="/favicon.ico" />
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen">
