--- a/blog/src/pages/blog.astro
+++ b/blog/src/pages/blog.astro
@@ -6,7 +6,7 @@ import P from '../components/P.astro';
 import H3 from '../components/H3.astro';
 
 ---
-
+<link rel="icon" href="/favicon.ico" />
 <Layout title="♡ my blog">
     <Main>
         <H3 text="♡ my blog">
