--- a/blog/src/components/Footer.astro
+++ b/blog/src/components/Footer.astro
@@ -29,8 +29,8 @@ import "../styles/global.css";
       <nav>
         <ul class="list-none p-8">
           <li class="inline mx-2"><a href="https://cyberplace.social/@noidev" >mastodon</a></li> |
-          <li class="inline mx-2"><a href="https://app.hackthebox.com/profile/">twitter</a></li> | 
-          <li class="inline mx-2"><a href="https://x.com/noidevp">github</a></li> | 
+          <li class="inline mx-2"><a href="https://x.com/noidevp">twitter</a></li> | 
+          <li class="inline mx-2"><a href="https://github.com/Noihirsch">github</a></li> | 
           <li class="inline mx-2"><a href="https://app.hackthebox.com/profile/sudonoi">htb</a></li> 
         </ul>
       </nav>
