--- a/blog/src/components/Gif.astro
+++ b/blog/src/components/Gif.astro
@@ -7,6 +7,6 @@ type Props = {
 const { url } = Astro.props;
 const { src } = Astro.props;
 ---
-
-<img src={url} src={src} alt="gif" class="w-1/6 h-1/6" style="margin-left: 40%;"/>
+<br>
+<img src={url} src={src} alt="gif" class="w-1/6 h-1/6" style="margin-left: 45%; width:10%"/>
 
