--- a/blog/src/pages/books.astro
+++ b/blog/src/pages/books.astro
@@ -10,8 +10,7 @@ import List from '../components/List.astro';
 <Layout title="reading list">
     <Main style="display: flex; flex-direction: column; align-items: center; width: 400px; margin: 0 auto;">
        <H3 text="♡ my reading list "></H3>
-        <P text="I'm noi. I began liking computers when I was 10 and my parents would lock the home computer and I'd go on safe mode and delete the password registry so I could play club penguin. I had a horrible python teacher that made me think i wasn't good at coding until I took it in college and learned that I was lowkey cracked at it."></P>
-        
+        <P text="tbd"        
         
     
     </Main>
