--- a/blog/src/pages/about.astro
+++ b/blog/src/pages/about.astro
@@ -5,6 +5,8 @@ import Footer from '../components/Footer.astro';
 import P from '../components/P.astro';
 import H3 from '../components/H3.astro';
 import List from '../components/List.astro';
+import Footer from '../components/Footer.astro';
+
 
 const interests = ["retro gaming and computing", "reading", "HEMA (historical fencing)", "swimming", "coding", "fashion", "politics", "tcgs (mtg and optcg)",  "anime (mostly keeping up with one piece", "ttrpgs (mostly dnd nowadays, but I'm really fond of anything wod!)","videogames (dead by daylight, baldur's gate 3, some cozy games here and there, etc)"];
 const favs = ["music: ghost, sleep token, rammstein, nightwish, nine ice kills, mcr", "book: cannot pick, probably the name of the wind by patrick rothfuss?", "programming language: java<3", "fashion style: glam, whimsygoth mixed with mall-emo. My fashion sense is constantly evolving."];
@@ -19,5 +21,5 @@ const favs = ["music: ghost, sleep token, rammstein, nightwish, nine ice kills, 
         <P text="I still build apps from time to time when I'm not busy watching one piece."></P><br>
         <P text="email: noidevp at proton.me"></P>
     </Main>
-
+<Footer></Footer>
 </Layout>
