--- a/blog/src/pages/books.astro
+++ b/blog/src/pages/books.astro
@@ -4,15 +4,12 @@ import Main from '../components/Main.astro';
 import Footer from '../components/Footer.astro';
 import P from '../components/P.astro';
 import H3 from '../components/H3.astro';
-import List from '../components/List.astro';
 
 ---
 <Layout title="reading list">
     <Main style="display: flex; flex-direction: column; align-items: center; width: 400px; margin: 0 auto;">
        <H3 text="♡ my reading list "></H3>
-        <P text="tbd"        
-        
-    
+        <P text="tbd"></P>
     </Main>
 <Footer></Footer>
 </Layout>
