--- a/blog/src/pages/books.astro
+++ b/blog/src/pages/books.astro
@@ -7,10 +7,10 @@ import H3 from '../components/H3.astro';
 
 ---
 <Layout title="reading list">
-    <Main style="display: flex; flex-direction: column; align-items: center; width: 400px; margin: 0 auto;">
+    <Main>
        <H3 text="♡ my reading list "></H3>
         <P text="tbd"></P>
     </Main>
-    
-<Footer></Footer>
+    <Footer></Footer>
 </Layout>
+    
